RESOLVED FIXED 225644
[GTK] compositing/overflow/dynamic-composited-scrolling-status.html is failing
https://bugs.webkit.org/show_bug.cgi?id=225644
Summary [GTK] compositing/overflow/dynamic-composited-scrolling-status.html is failing
Diego Pino
Reported 2021-05-11 02:04:35 PDT
The test is constantly failing since r277258. Results dashboard: https://results.webkit.org/?suite=layout-tests&test=compositing%2Foverflow%2Fdynamic-composited-scrolling-status.html&platform=GTK&platform=WPE https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/r277317%20%281677%29/compositing/overflow/dynamic-composited-scrolling-status-diff.txt --- /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/compositing/overflow/dynamic-composited-scrolling-status-expected.txt +++ /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/compositing/overflow/dynamic-composited-scrolling-status-actual.txt @@ -1 +1 @@ -PASS +FAIL
Attachments
Patch (1.63 KB, patch)
2021-05-11 02:10 PDT, Diego Pino
no flags
Patch (1.64 KB, patch)
2021-05-11 02:23 PDT, Diego Pino
ews-feeder: commit-queue-
Patch (1.72 KB, patch)
2021-08-06 09:58 PDT, Arcady Goldmints-Orlov
no flags
Diego Pino
Comment 1 2021-05-11 02:10:38 PDT
Diego Pino
Comment 2 2021-05-11 02:23:41 PDT
EWS
Comment 3 2021-05-11 03:39:46 PDT
Committed r277319 (237578@main): <https://commits.webkit.org/237578@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 428258 [details].
Radar WebKit Bug Importer
Comment 4 2021-05-11 03:40:20 PDT
WebKit Commit Bot
Comment 5 2021-05-11 17:58:47 PDT
Re-opened since this is blocked by bug 225680
Diego Pino
Comment 6 2021-05-11 22:40:26 PDT
Once this patch landed the following tests started to fail: compositing/geometry/limit-layer-bounds-transformed-overflow.html [ Failure ] compositing/layer-creation/overflow-scroll-overlap.html [ Failure ] compositing/layer-creation/scroll-partial-update.html [ Failure ] compositing/overflow/content-gains-scrollbars.html [ Failure ] compositing/overflow/overflow-scrollbar-layer-positions.html [ Failure ] compositing/overflow/overflow-scrollbar-layers.html [ Failure ] css3/filters/clipping-overflow-scroll-with-pixel-moving-effect-on.html [ ImageOnlyFailure ] css3/filters/clipping-overflow-scroll-with-pixel-moving-effect-on-parent.html [ ImageOnlyFailure ] fast/events/wheel/continuous-platform-wheelevent-in-scrolling-div.html [ Failure ] fast/forms/basic-textareas.html [ Failure ] fast/overflow/scrollRevealButton.html [ Failure ] fast/repaint/horizontal-bt-overflow-child.html [ Failure ] fast/repaint/horizontal-bt-overflow-parent.html [ Failure ] fast/repaint/horizontal-bt-overflow-same.html [ Failure ] fast/repaint/vertical-overflow-child.html [ Failure ] fast/repaint/vertical-overflow-parent.html [ Failure ] fast/repaint/vertical-overflow-same.html [ Failure ] fast/scrolling/overflow-scrollable-after-back.html [ Timeout ] fast/scrolling/rtl-scrollbars-overflow-dir-rtl.html [ ImageOnlyFailure ] fast/scrolling/rtl-scrollbars-overflow-padding.html [ ImageOnlyFailure ] fast/scrolling/rtl-scrollbars-sticky-overflow-scroll-2.html [ ImageOnlyFailure ] fast/scrolling/rtl-scrollbars-sticky-overflow-scroll.html [ ImageOnlyFailure ] fast/spatial-navigation/snav-clipped-overflowed-content.html [ Failure ] fast/spatial-navigation/snav-only-clipped-overflow-content.html [ Failure ] fast/spatial-navigation/snav-simple-content-overflow.html [ Failure ] fast/text/mark-matches-overflow-clip.html [ Failure ] imported/blink/compositing/animation/hidden-animated-layer-should-not-have-scrollbars.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-flexbox/overflow-auto-001.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-grid/grid-model/grid-container-scrollbar-vertical-lr-001.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-grid/grid-model/grid-container-scrollbar-vertical-rl-001.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-overflow/scrollbar-empty-002.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-position/hypothetical-box-scroll-parent.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-ui/outline-negative-offset-composited-scroll.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/fieldset-overflow.html [ ImageOnlyFailure ] scrollbars/corner-resizer-window-inactive.html [ ImageOnlyFailure ] scrollbars/scroll-rtl-or-bt-layer.html [ Failure ] svg/custom/invisible-text-after-scrolling.xhtml [ Failure ] It's 37 tests in total. With these many failures the EWS GTK-WK2 bots that we're currently testing in UAT will always fail, so I reverted the patch. Regarding how to fix this test, I initially thought that enabling AsyncOverflowScrolling, as WPE's WKRT does, was the right solution. Maybe that's still right but I'd need to examine with more detail the test results with this patch applied (I didn't pay attention to how many new passes there are, so perhaps that will compensate the new failures). Another alternative solution might be to enable AysncOverflowScrolling only for certain tests.
Arcady Goldmints-Orlov
Comment 7 2021-08-06 09:58:53 PDT
EWS
Comment 8 2021-08-06 16:21:13 PDT
Committed r280743 (240329@main): <https://commits.webkit.org/240329@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435075 [details].
Note You need to log in before you can comment on or make changes to this bug.