[GTK] compositing/overflow/dynamic-composited-scrolling-status.html is failing https://bugs.webkit.org/show_bug.cgi?id=225644

Reviewed by Carlos Garcia Campos.

The test started failing in r277258, which makes WebKitGTK to use
always async scrolling in AC mode. After this change, WebKitTestRunner
should always enable AsyncOverflowScrolling.

* WebKitTestRunner/gtk/TestControllerGtk.cpp:
(WTR::TestController::platformSpecificFeatureDefaultsForTest const): Enable AsyncOverflowScrolling.


Canonical link: https://commits.webkit.org/237578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277319 268f45cc-cd09-0410-ab3c-d52691b4dbfc