Tools/WebKitTestRunner/gtk/TestControllerGtk.cpp
@@ -155,7 +155,9 @@ bool TestController::platformResetStateToConsistentValues(const TestOptions&)
 
 TestFeatures TestController::platformSpecificFeatureDefaultsForTest(const TestCommand&) const
 {
-    return { };
+    TestFeatures features;
+    features.boolWebPreferenceFeatures.insert({ "AsyncOverflowScrollingEnabled", true });
+    return features;
 }
 
 } // namespace WTR
